--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ timezone: Asia/Karachi
 
 title: Anas Sharif                          # the main title
 
-tagline: Sr Native Mobile Developer   # it will display as the sub-title
+tagline: Native Mobile Developer   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
