update post name with date

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ title: Anas Sharif                          # the main title
 tagline: Native Mobile Developer   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  I am a passionate programmer and a clean code evangelist who mainly likes to create Android apps and open source libraries. I am so lazy that I write plugins to automate most of my work. This way I get more time to work on creative projects. If you want to know more about me, check out my resume.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://anassharif.github.io'
